grails-app/assets/stylesheets/sass/partials/_tab.scss
.ui-tabs {
    position: relative; // position: relative prevents IE scroll bug (element with position: relative inside container with overflow: auto appear as "fixed")
    padding: .2em;

    .ui-tabs-nav {
        margin: 0;
        padding: .2em .2em 0;

        li {
            position: relative;
            top: 0;
            float: left;
            margin: 1px .2em 0 0;
            padding: 0;
            border-bottom-width: 0;
            white-space: nowrap;
            list-style: none;
        }

        .ui-tabs-anchor {
            float: left;
            padding: .5em 1em;
            text-decoration: none;
        }
    }

    .ui-tabs-panel {
        display: block;
        padding: 1em 1.4em;
        border-width: 0;
        background: none;
    }
}

//.ui-tabs .ui-tabs-nav li.ui-tabs-active {
//    margin-bottom: -1px;
//    padding-bottom: 1px;
//}

.ui-tabs .ui-tabs-nav li.ui-tabs-active .ui-tabs-anchor,
.ui-tabs .ui-tabs-nav li.ui-state-disabled .ui-tabs-anchor,
.ui-tabs .ui-tabs-nav li.ui-tabs-loading .ui-tabs-anchor {
    cursor: text;
}

.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-active .ui-tabs-anchor {
    cursor: pointer;
}

.patient-tab {
    position: relative;
    padding: 0;
    border: 0;

    .icon-archived {
        //        padding: 0;
        color: inherit;

        &:before {
            padding-left: 0;
            color: inherit;
            content: '\f2c9';
            font-family: ionicons;
        }
    }

    .add-tab {
        position: absolute;
        top: 21px;
        right: 30px;
        width: 142px;
        height: 30px;
        margin-right: 0;
        padding: 0;
        border: 1px solid $base-color-white;
        color: $base-color-white;

        &:before {
            position: absolute;
            top: 2px;
            left: 8px;
            padding-left: 4px;
            content: '\f489';
            color: $base-color-white;
            font-size: 20px;
            font-family: ionicons;
        }

        span {
            display: inline-block;
            padding-left: 20px;
            color: $base-color-white;
            font-size: 14px;
        }

        &:hover,
        &:focus {
            border: 1px solid $base-color-tab-font-hover;
            color: $base-color-tab-font-hover;
            background-color: $base-color-white;

            span,
            &:before {
                color: $base-color-tab-font-hover;
            }
        }
    }

    .tab-treatment {
        min-width: 1060px;
        height: 65px;
        padding: 0;
        border: 0;
        border-top: 3px solid $base-color-white-grey;
        background: $base-color-mid-grey;
        overflow: hidden;

        .ui-state-default {
            max-height: 65px;
            margin: 0;
            padding: 0;
            background-color: $base-color-tab-default;
        }

        .ui-tabs-anchor {
            padding: 0 55px;
            border-right: 2px solid $base-color-mid-grey;
            border-bottom: 0;
            min-width: 150px;
            text-align: center;
            color: $base-color-white;
            font-size: 16px;
            line-height: 65px;
            text-transform: uppercase;
            font-weight: 300;
            font-family: Lato;
        }

        .ui-state-active {
            //            background-color: $base-color-tab-bg;
            background-color: $base-color-white;

            a {
                height: 65px;
                color: $base-color-dark-grey;
                font-weight: 400;
                font-family: Lato;
                font-size: 17px;
            }
        }

        .archived-treatment {
            background-color: $base-font-color;

            .icon-archived {
                color: $base-font-grey;
            }
        }
    }

    .ui-tabs-panel {
        padding: 0;
        border: 0;

        .archived {
            //            min-height: 600px;
            background-color: $base-color-archived-bg;
        }
    }
}

.sub-tabs {
    padding: 0;
    border: 0;

    .icon-archived {

        &:before {
            padding-left: 0;
            color: $base-font-color;
        }
    }

    .tab-list {
        position: relative;
        height: 50px;
        padding: 0;
        border: 0;
        border-bottom: 2px solid $base-color-white-grey;
        //        background-color: $base-color-tab-bg;
        font-weight: 300;
        font-family: Lato;

        .ui-state-default {
            margin: 0;
            padding: 0;
        }

        .ui-tabs-anchor {
            display: inline-block;
            padding: 0 30px;
            border-bottom: 4px solid transparent;
            color: $base-color-medium-black;
            font-size: 15px;
            line-height: 50px;
            font-weight: 300;
            font-family: Lato;
        }

        .ui-state-active {
            a {
                border-color: $base-color-dark-grey;
                color: $base-color-dark-grey;
                font-weight: 400;
                font-family: Lato;
            }
        }

        .surgery-date {
            position: absolute;
            right: 25px;
            line-height: 40px;

            .archived-treatment-title {
                display: inline;
                margin-right: 40px;
                color: $base-color-dark-grey;
                font-weight: 400;
                font-family: Lato;
            }
        }

        .surgery-date-disabled {
            background-color: $base-font-grey;
        }
        .disabled {
            background-color: $base-font-grey;
        }

        .code-generation {
            position: absolute;
            right: 120px;
            line-height: 40px;

            .btn-generate-code {
                top: 2px;
            }

            .btn-generate-code-disabled {
                color: $base-color-grey;
                border-color: $base-color-grey;
                cursor: auto;

                &:hover {
                    background-color: transparent;
                    color: $base-color-grey;
                }
            }
        }

        .more-drop-down {
            position: absolute;
            right: 15px;
            line-height: 40px;
            width: 66px;

            .drop-down-toggle {
                padding-top: 13px;
                background: none;
                border: none;
                color: $base-surgery-date-bgcolor;
                font-size: 17px;

                &:hover {
                    text-decoration: underline;
                }
            }

            .btn-disabled {
                color: $base-color-grey;

                &:hover {
                    text-decoration: none;
                }
            }

            .drop-down-lists {
                position: relative;
                right: 20px;
                z-index: 999;
                background-color: $base-color-white;

                .drop-down-list {
                    font-weight: 400;
                    height: 25px;
                    padding: 6px 5px 1px;
                    text-align: left;

                    &:hover {
                        color: $base-color-white;
                        background-color: $base-surgery-date-bgcolor;
                    }
                }

                .archived-active {
                    border-top: 0;
                }
            }

        }
    }

    .surgery-date {
        background-color: $base-surgery-date-bgcolor;
        line-height: 30px;

        span {
            margin-left: 30px;
            color: $base-surgery-date-color;
            font-family: Lato;
            font-weight: 300;
            font-size: 14px;
        }

        label {
            display: inline;
            padding-right: 10px;
            color: $base-surgery-date-color;
            font-size: 14px;
            font-weight: 300;
        }

        .archived-treatment-title {
            font-weight: 400;
            margin-left: 15px;
            color: $base-color-white;
        }

        img {
            vertical-align: sub;
        }
    }

    .disabled {
        background-color: $base-font-grey;
    }

}

//.ui-tabs .ui-tabs-nav li.ui-tabs-active {
//    margin-bottom: 0;
//    padding-bottom: 0;
//}

